--- a/angular/src/account/register/register-tenant.component.html
+++ b/angular/src/account/register/register-tenant.component.html
@@ -68,13 +68,13 @@
                 </div>
             </div>
 
-            <p *ngIf="useCaptcha" class="mt-2 form-text text-muted">
+            <!-- <p *ngIf="useCaptcha" class="mt-2 form-text text-muted">
                 {{"Captha_Hint" | localize}}
             </p>
 
             <div *ngIf="useCaptcha" class="form-group mt-2 text-center captcha-container">
                 <re-captcha #recaptchaRef (resolved)="captchaResolved($event)" [siteKey]="recaptchaSiteKey"></re-captcha>
-            </div>
+            </div> -->
 
             <div class="kt-login__actions">
                 <button [disabled]="saving" routerLink="/account/login" type="button" class="btn btn-light btn-elevate kt-login__btn-secondary"><i class="fa fa-arrow-left"></i> {{"Back" | localize}}</button>
