--- a/angular/src/app/main/entities/orderItems/masterDetailChild_Order_orderItems.component.html
+++ b/angular/src/app/main/entities/orderItems/masterDetailChild_Order_orderItems.component.html
@@ -1,45 +1,32 @@
-﻿<div [@routerTransition]>
-  
-  
-  
-                <div class="kt-subheader kt-grid__item">
-                  
-                    <div class="kt-subheader__main">
-                        <h3 class="kt-subheader__title">
-                            <span>{{l("OrderItems")}}</span>
-                        </h3>
-                        <span class="kt-subheader__separator kt-subheader__separator--v"></span>
-                        <span class="kt-subheader__desc">
-                            {{l("OrderItemsHeaderInfo")}}
-                        </span>
-                    </div>
-                    <div class="kt-subheader__toolbar">
-                        <div class="kt-subheader__wrapper">
-            				<button *ngIf="isGranted('Pages.OrderItems.Create')" (click)="createOrderItem()" 
-            			class="btn btn-primary blue"><i class="fa fa-plus"></i> {{l("CreateNewOrderItem")}}</button>
-                        </div>
-                    </div>
-                  
-                </div>
-            
-    
-    <div class="kt-content">
+﻿    <div class="kt-content">
         <div class="kt-portlet kt-portlet--mobile">
+                      
+              <div class="portlet-title">
+                <div class="caption">
+                    <span class="caption-subject bold uppercase">{{"OrderItems" | localize}}</span>
+                </div>
+                <div class="actions">
+                      
+                      <button *ngIf="isGranted('Pages.OrderItems.Create')" (click)="createOrderItem()" 
+                      class="btn btn-primary blue"><i class="fa fa-plus"></i> {{l("CreateNewOrderItem")}}</button>                    
+                </div>
+             </div>
+             
             <div class="kt-portlet__body">
                 <form class="kt-form" autocomplete="off">
                     <div>
                         <div class="row align-items-center">
                             <div class="col-xl-12">
                                 
-                <div class="form-group m-form__group align-items-center">
-                    <div class="input-group">
-                    <input [(ngModel)]="filterText" name="filterText" autoFocus class="form-control m-input" [placeholder]="l('SearchWithThreeDot')" type="text">
-                        <span class="input-group-btn">
-                            <button (click)="getOrderItems()" class="btn btn-primary" type="submit"><i class="flaticon-search-1"></i></button>
-                        </span>
+                    <div class="form-group m-form__group align-items-center">
+                        <div class="input-group">
+                            <input [(ngModel)]="filterText" name="filterText" autoFocus class="form-control m-input" [placeholder]="l('SearchWithThreeDot')" type="text">
+                            <span class="input-group-btn">
+                                <button (click)="getOrderItems()" class="btn btn-primary" type="submit"><i class="flaticon-search-1"></i></button>
+                            </span>
+                        </div>
                     </div>
-                </div>
-        	
+            
                                 
                             </div>
                         </div>
@@ -69,12 +56,6 @@
                             </div>
 
 
-							<div class="col-md-3">
-								<div class="form-group">
-									<label for="OrderOrderNameFilter">({{l("Order")}}) {{l("OrderName")}}</label>
-									<input type="text" class="form-control" id="OrderOrderNameFilter" name="orderOrderNameFilter" [(ngModel)]="orderOrderNameFilter">
-                                </div>
-                            </div>
 							<div class="col-md-3">
 								<div class="form-group">
 									<label for="BookTitleFilter">({{l("Book")}}) {{l("Title")}}</label>
@@ -110,10 +91,6 @@
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th style="width: 130px" [hidden]="!isGrantedAny('Pages.OrderItems.Edit', 'Pages.OrderItems.Delete')">{{l('Actions')}}</th>
-                                    <th style="width: 150px" pSortableColumn="orderFk.orderName">
-                                        {{l('OrderName')}}
-                                        <p-sortIcon field="orderOrderName"></p-sortIcon>
-                                    </th>
                                     <th style="width: 150px" pSortableColumn="bookFk.title">
                                         {{l('Title')}}
                                         <p-sortIcon field="bookTitle"></p-sortIcon>
@@ -129,7 +106,7 @@
 
                                 </tr>
                             </ng-template>                           
-							<ng-template pTemplate="body" let-record="$implicit" let-i="rowIndex">
+							<ng-template pTemplate="body" let-record="$implicit">
                                 <tr>
                                     <td style="width: 130px"
                                         [hidden]="!isGrantedAny('Pages.OrderItems.Edit', 'Pages.OrderItems.Delete')">
@@ -144,7 +121,7 @@
 												</li>
 												<li>
                                                 <a href="javascript:;" *ngIf="permission.isGranted('Pages.OrderItems.Edit')" 
-														(click)="createOrEditOrderItemModal.show(record.orderItem.id)">{{l('Edit')}}</a>												
+														(click)="createOrEditOrderItemModal.show(orderId,record.orderItem.id)">{{l('Edit')}}</a>												
                                                 </li>
 												<li>
 											        <a  href="javascript:;" *ngIf="permission.isGranted('Pages.OrderItems.Delete')"
@@ -153,10 +130,6 @@
                                             </ul>
                                         </div>
                                     </td>
-                                    <td style="width:150px">
-												<span class="ui-column-title"> {{l('OrderName')}}</span>
-												{{record.orderOrderName}}
-											</td>
                                     <td style="width:150px">
 												<span class="ui-column-title"> {{l('Title')}}</span>
 												{{record.bookTitle}}
@@ -171,7 +144,6 @@
 										</td>
 
                                 </tr>
-                               
                             </ng-template>
                         </p-table>
 						<div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
@@ -194,8 +166,6 @@
             </div>
         </div>
     </div>
-    <createOrEditOrderItemModal #createOrEditOrderItemModal (modalSave)="getOrderItems()"></createOrEditOrderItemModal>    
-    <viewOrderItemModal #viewOrderItemModal></viewOrderItemModal>
+    <masterDetailChild_Order_createOrEditOrderItemModal #createOrEditOrderItemModal (modalSave)="getOrderItems()"></masterDetailChild_Order_createOrEditOrderItemModal>    
+    <masterDetailChild_Order_viewOrderItemModal #viewOrderItemModal></masterDetailChild_Order_viewOrderItemModal>
     
-  
-</div>
