--- a/angular/src/app/main/entities/orders/orders.component.html
+++ b/angular/src/app/main/entities/orders/orders.component.html
@@ -6,17 +6,17 @@
                   
                     <div class="kt-subheader__main">
                         <h3 class="kt-subheader__title">
-                            <span>{{l("OrderItems")}}</span>
+                            <span>{{l("Orders")}}</span>
                         </h3>
                         <span class="kt-subheader__separator kt-subheader__separator--v"></span>
                         <span class="kt-subheader__desc">
-                            {{l("OrderItemsHeaderInfo")}}
+                            {{l("OrdersHeaderInfo")}}
                         </span>
                     </div>
                     <div class="kt-subheader__toolbar">
                         <div class="kt-subheader__wrapper">
-            				<button *ngIf="isGranted('Pages.OrderItems.Create')" (click)="createOrderItem()" 
-            			class="btn btn-primary blue"><i class="fa fa-plus"></i> {{l("CreateNewOrderItem")}}</button>
+            				<button *ngIf="isGranted('Pages.Orders.Create')" (click)="createOrder()" 
+            			class="btn btn-primary blue"><i class="fa fa-plus"></i> {{l("CreateNewOrder")}}</button>
                         </div>
                     </div>
                   
@@ -35,7 +35,7 @@
                     <div class="input-group">
                     <input [(ngModel)]="filterText" name="filterText" autoFocus class="form-control m-input" [placeholder]="l('SearchWithThreeDot')" type="text">
                         <span class="input-group-btn">
-                            <button (click)="getOrderItems()" class="btn btn-primary" type="submit"><i class="flaticon-search-1"></i></button>
+                            <button (click)="getOrders()" class="btn btn-primary" type="submit"><i class="flaticon-search-1"></i></button>
                         </span>
                     </div>
                 </div>
@@ -51,34 +51,47 @@
 
                             <div class="col-md-3">
                                 <div class="form-group">
-									<label for="MinQuantityFilter">{{l("MinMax")}} {{l("Quantity")}}</label>
+									<label  for="MinOrderDateFilter">{{l("OrderDateRange")}}</label>
 									<div class="input-group">
-                                        <input type="number" class="form-control" id="MinQuantityFilter" [(ngModel)]="minQuantityFilter" placeholder="{{l('MinValue')}}" name="minQuantityFilter" />
-                                        <input type="number" class="form-control" [(ngModel)]="maxQuantityFilter" placeholder="{{l('MaxValue')}}" name="maxQuantityFilter" />
+                                        <input class="form-control m-input" id="MinOrderDateFilter" name="MinOrderDateFilter" type="datetime" bsDatepicker  placeholder="{{l('MinValue')}}" [(ngModel)]="minOrderDateFilter">
+			                            <span style="line-height: 40px;padding: 0 15px 0 15px;"> &mdash; </span>
+                                        <input class="form-control m-input" id="MaxOrderDateFilter" name="MaxOrderDateFilter" type="datetime" bsDatepicker  placeholder="{{l('MaxValue')}}" [(ngModel)]="maxOrderDateFilter">
 									</div>
                                 </div>
+                            </div>
+							<div class="col-md-3">
+								<div class="form-group">
+									<label for="DescriptionFilter">{{l("Description")}}</label>
+									<input type="text" class="form-control" id="DescriptionFilter" name="descriptionFilter" [(ngModel)]="descriptionFilter">
+								</div>
+                            </div>
+							<div class="col-md-3">
+								<div class="form-group">
+									<label for="StatusFilter">{{l("Status")}}</label>
+									<input type="text" class="form-control" id="StatusFilter" name="statusFilter" [(ngModel)]="statusFilter">
+								</div>
                             </div>
                             <div class="col-md-3">
                                 <div class="form-group">
-									<label for="MinPriceFilter">{{l("MinMax")}} {{l("Price")}}</label>
+									<label for="MinTotalBillFilter">{{l("MinMax")}} {{l("TotalBill")}}</label>
 									<div class="input-group">
-                                        <input type="number" class="form-control" id="MinPriceFilter" [(ngModel)]="minPriceFilter" placeholder="{{l('MinValue')}}" name="minPriceFilter" />
-                                        <input type="number" class="form-control" [(ngModel)]="maxPriceFilter" placeholder="{{l('MaxValue')}}" name="maxPriceFilter" />
+                                        <input type="number" class="form-control" id="MinTotalBillFilter" [(ngModel)]="minTotalBillFilter" placeholder="{{l('MinValue')}}" name="minTotalBillFilter" />
+                                        <input type="number" class="form-control" [(ngModel)]="maxTotalBillFilter" placeholder="{{l('MaxValue')}}" name="maxTotalBillFilter" />
 									</div>
                                 </div>
                             </div>
-
-
 							<div class="col-md-3">
 								<div class="form-group">
-									<label for="OrderOrderNameFilter">({{l("Order")}}) {{l("OrderName")}}</label>
-									<input type="text" class="form-control" id="OrderOrderNameFilter" name="orderOrderNameFilter" [(ngModel)]="orderOrderNameFilter">
-                                </div>
+									<label for="OrderNameFilter">{{l("OrderName")}}</label>
+									<input type="text" class="form-control" id="OrderNameFilter" name="orderNameFilter" [(ngModel)]="orderNameFilter">
+								</div>
                             </div>
+
+
 							<div class="col-md-3">
 								<div class="form-group">
-									<label for="BookTitleFilter">({{l("Book")}}) {{l("Title")}}</label>
-									<input type="text" class="form-control" id="BookTitleFilter" name="bookTitleFilter" [(ngModel)]="bookTitleFilter">
+									<label for="UserNameFilter">({{l("User")}}) {{l("Name")}}</label>
+									<input type="text" class="form-control" id="UserNameFilter" name="userNameFilter" [(ngModel)]="userNameFilter">
                                 </div>
                             </div>
 
@@ -98,7 +111,7 @@
                     <div class="primeng-datatable-container col-12"
                          [busyIf]="primengTableHelper.isLoading">
                         <p-table #dataTable
-                                     (onLazyLoad)="getOrderItems($event)"
+                                     (onLazyLoad)="getOrders($event)"
                                      [value]="primengTableHelper.records"
                                      rows="{{primengTableHelper.defaultRecordsCountPerPage}}"
                                      [paginator]="false"
@@ -109,30 +122,39 @@
                                      [resizableColumns]="primengTableHelper.resizableColumns">
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th style="width: 130px" [hidden]="!isGrantedAny('Pages.OrderItems.Edit', 'Pages.OrderItems.Delete')">{{l('Actions')}}</th>
-                                    <th style="width: 150px" pSortableColumn="orderFk.orderName">
+                                    <th style="width: 130px" [hidden]="!isGrantedAny('Pages.Orders.Edit', 'Pages.Orders.Delete')">{{l('Actions')}}</th>
+                                    <th style="width: 150px" pSortableColumn="orderByFk.name">
+                                        {{l('Name')}}
+                                        <p-sortIcon field="userName"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="orderDate">
+                                        {{l('OrderDate')}}
+                                        <p-sortIcon field="order.orderDate"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="description">
+                                        {{l('Description')}}
+                                        <p-sortIcon field="order.description"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="status">
+                                        {{l('Status')}}
+                                        <p-sortIcon field="order.status"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="totalBill">
+                                        {{l('TotalBill')}}
+                                        <p-sortIcon field="order.totalBill"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="orderName">
                                         {{l('OrderName')}}
-                                        <p-sortIcon field="orderOrderName"></p-sortIcon>
-                                    </th>
-                                    <th style="width: 150px" pSortableColumn="bookFk.title">
-                                        {{l('Title')}}
-                                        <p-sortIcon field="bookTitle"></p-sortIcon>
-                                    </th>
-                                    <th style="width: 150px" pSortableColumn="quantity">
-                                        {{l('Quantity')}}
-                                        <p-sortIcon field="orderItem.quantity"></p-sortIcon>
-                                    </th>
-                                    <th style="width: 150px" pSortableColumn="price">
-                                        {{l('Price')}}
-                                        <p-sortIcon field="orderItem.price"></p-sortIcon>
+                                        <p-sortIcon field="order.orderName"></p-sortIcon>
                                     </th>
 
+                 <th style="width:50px"></th>
                                 </tr>
                             </ng-template>                           
 							<ng-template pTemplate="body" let-record="$implicit" let-i="rowIndex">
                                 <tr>
                                     <td style="width: 130px"
-                                        [hidden]="!isGrantedAny('Pages.OrderItems.Edit', 'Pages.OrderItems.Delete')">
+                                        [hidden]="!isGrantedAny('Pages.Orders.Edit', 'Pages.Orders.Delete')">
                                        <div class="btn-group dropdown" dropdown container="body">
                                             <button class="dropdown-toggle btn btn-sm btn-primary" dropdownToggle>
                                                 <i class="fa fa-cog"></i><span class="caret"></span> {{l("Actions")}}
@@ -140,38 +162,61 @@
 												<ul class="dropdown-menu"  *dropdownMenu>
 												<li>
 													<a href="javascript:;" 
-														(click)="viewOrderItemModal.show(record)">{{l('View')}}</a>
+														(click)="viewOrderModal.show(record)">{{l('View')}}</a>
 												</li>
 												<li>
-                                                <a href="javascript:;" *ngIf="permission.isGranted('Pages.OrderItems.Edit')" 
-														(click)="createOrEditOrderItemModal.show(record.orderItem.id)">{{l('Edit')}}</a>												
+                                                <a href="javascript:;" *ngIf="permission.isGranted('Pages.Orders.Edit')" 
+														(click)="createOrEditOrderModal.show(record.order.id)">{{l('Edit')}}</a>												
                                                 </li>
 												<li>
-											        <a  href="javascript:;" *ngIf="permission.isGranted('Pages.OrderItems.Delete')"
-														(click)="deleteOrderItem(record.orderItem)">{{l('Delete')}}</a>
+											        <a  href="javascript:;" *ngIf="permission.isGranted('Pages.Orders.Delete')"
+														(click)="deleteOrder(record.order)">{{l('Delete')}}</a>
 												</li>
                                             </ul>
                                         </div>
                                     </td>
                                     <td style="width:150px">
-												<span class="ui-column-title"> {{l('OrderName')}}</span>
-												{{record.orderOrderName}}
+												<span class="ui-column-title"> {{l('Name')}}</span>
+												{{record.userName}}
 											</td>
                                     <td style="width:150px">
-												<span class="ui-column-title"> {{l('Title')}}</span>
-												{{record.bookTitle}}
-											</td>
+										<span class="ui-column-title"> {{l('OrderDate')}}</span>
+                                        <span *ngIf="record.order.orderDate">
+											{{record.order.orderDate |  momentFormat:'L' }}
+                                        </span>
+                                        <span *ngIf="!record.order.orderDate">-</span>
+                                    </td>
                                     <td style="width:150px">
-											<span class="ui-column-title"> {{l('Quantity')}}</span>
-											{{record.orderItem.quantity}}
+											<span class="ui-column-title"> {{l('Description')}}</span>
+											{{record.order.description}}
 										</td>
                                     <td style="width:150px">
-											<span class="ui-column-title"> {{l('Price')}}</span>
-											{{record.orderItem.price}}
+											<span class="ui-column-title"> {{l('Status')}}</span>
+											{{record.order.status}}
+										</td>
+                                    <td style="width:150px">
+											<span class="ui-column-title"> {{l('TotalBill')}}</span>
+											{{record.order.totalBill}}
+										</td>
+                                    <td style="width:150px">
+											<span class="ui-column-title"> {{l('OrderName')}}</span>
+											{{record.order.orderName}}
 										</td>
 
+                     <td style="width:50px">
+                       <button class="btn btn-primary btn-xs" (click)="openChildRowForOrderItem(i,'OrderItem_OrderId');">{{'EditOrderItem' | localize}}</button>
+                     </td>
+                 
                                 </tr>
                                
+                     <tr *ngIf="orderItemRowSelection[i] && childEntitySelection['OrderItem_OrderId']">
+                         <td colspan="8">
+                             <masterDetailChild_Order_orderItems-component
+                             [orderId]="record.order.id">
+                             </masterDetailChild_Order_orderItems-component>
+                         </td>
+                     </tr>
+                 
                             </ng-template>
                         </p-table>
 						<div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
@@ -180,7 +225,7 @@
                         <div class="primeng-paging-container">
                             <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage"
                                          #paginator
-                                         (onPageChange)="getOrderItems($event)"
+                                         (onPageChange)="getOrders($event)"
                                          [totalRecords]="primengTableHelper.totalRecordsCount"
                                          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
                                          [showCurrentPageReport]="true"
@@ -194,8 +239,8 @@
             </div>
         </div>
     </div>
-    <createOrEditOrderItemModal #createOrEditOrderItemModal (modalSave)="getOrderItems()"></createOrEditOrderItemModal>    
-    <viewOrderItemModal #viewOrderItemModal></viewOrderItemModal>
+    <createOrEditOrderModal #createOrEditOrderModal (modalSave)="getOrders()"></createOrEditOrderModal>    
+    <viewOrderModal #viewOrderModal></viewOrderModal>
     
   
 </div>
